2023-09-27T00:59:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6320026655 # 1213
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
* notice: last 14d: unq all: 3 3705
* notice: prev accum: outdated-unq outdated-all / unq all: 1706 160901 / 1738 164561
* notice: next accum: outdated-unq outdated-all / unq all: 1707 160951 / 1738 164657
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -1 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-09-12] / [2023-09-13 2023-09-26]

2023-09-26T16:17:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6315477267 # 1212
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
* notice: last 14d: unq all: 3 3624
* notice: prev accum: outdated-unq outdated-all / unq all: 1706 160901 / 1738 164469
* notice: next accum: outdated-unq outdated-all / unq all: 1706 160901 / 1738 164561
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -17 / +3 +205 -0 -0 / 3 205
* notice: removed / changed dates: [] / [2023-09-12 2023-09-26]

2023-09-26T08:17:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6309950432 # 1211
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
* notice: last 14d: unq all: 3 3549
* notice: prev accum: outdated-unq outdated-all / unq all: 1706 160901 / 1735 164356
* notice: next accum: outdated-unq outdated-all / unq all: 1706 160901 / 1738 164469
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -0 -18 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-09-12 2023-09-26]

2023-09-26T00:59:17Z: