@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-09-27T00:59:15Z",
+  "timestamp" : "2023-09-27T08:17:22Z",
   "count_outdated" : 160951,
   "uniques_outdated" : 1707,
-  "count" : 164657,
-  "uniques" : 1738,
+  "count" : 164770,
+  "uniques" : 1741,
   "clones" : [
     {
       "timestamp": "2023-09-13T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 50, 51 ],
-      "count_decinc": [ 1, 51 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 31,
+      "count_minmax": [ 31, 51 ],
+      "count_decinc": [ 20, 51 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-09-14T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 301,
       "count_minmax": [ 113, 301 ],
       "count_decinc": [ 0, 301 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-09-27T00:00:00Z",
+      "count": 113,
+      "count_minmax": [ 113, 113 ],
+      "count_decinc": [ 0, 113 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
