@@ -1,11 +1,11 @@
 {
-  "count": 3705,
+  "count": 3799,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-09-13T00:00:00Z",
-      "count": 50,
-      "uniques": 2
+      "count": 31,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-14T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-09-26T00:00:00Z",
       "count": 301,
+      "uniques": 3
+    },
+    {
+      "timestamp": "2023-09-27T00:00:00Z",
+      "count": 113,
       "uniques": 3
     }
   ]
